tests/local/invalid/invalid-ty2.wast
(assert_invalid
  (module
    (func block (type 2))
  )
  "type index out of bounds")
